--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
       </main>
       <footer>
         <h2>2. Sonderfertigkeiten</h2>
+        <form action="?action=submit">
+          <input id="axxeleratus" name="axxeleratus" type="checkbox" /><label
+            for="axxeleratus"
+            >Axxeleratus</label
+          >
+        </form>
         <button class="btn-weiter">Click</button>
       </footer>
     </div>
